--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>המדריך המלא ליצירת סרטונים ב-ComfyUI</h1>
+        <h1>סנכרון שפתיים עם תמונה</h1>
         <p>שלום! במדריך זה אציג לכם צעד אחר צעד כיצד יצרתי את הסרטונים שלי באמצעות ComfyUI, מהדמות ועד שילוב הקול והתנועה.</p>
 
         <hr>
 
         <div class="section">
             <h2>הסרטון המוגמר</h2>
+            <h3>SONIC</h3>
             <p>כאן תוכלו לצפות בסרטון הסופי שיצרתי:</p>
             <video controls>
                 <source src="videos/09movie1.mp4" type="video/mp4">
