--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #333;
         }
         .container {
-            max-width: 960px;
+            max-width: 1200px; /* רוחב הדף הכללי הוגדל ל-1200 פיקסלים */
             margin: 20px auto;
             background: #fff;
             padding: 30px 40px;
@@ -69,6 +69,8 @@
             border-radius: 8px;
             border: 1px solid #ddd;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            /* אם רצית להגדיל את התמונות במיוחד, אפשר להוסיף את זה: */
+            /* min-width: 70%; */
         }
         .image-caption {
             text-align: center;
@@ -153,14 +155,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>סנכרון שפתיים עם תמונה</h1>
+        <h1>סינכרון שפתיים עם תמונה</h1>
         <p>שלום! במדריך זה אציג לכם צעד אחר צעד כיצד יצרתי את הסרטונים שלי באמצעות ComfyUI, מהדמות ועד שילוב הקול והתנועה.</p>
 
         <hr>
 
         <div class="section">
-            <h2>הסרטון המוגמר</h2>
-            <h3>SONIC</h3>
+            <h2>SONIC</h2>
             <p>כאן תוכלו לצפות בסרטון הסופי שיצרתי:</p>
             <video controls>
                 <source src="videos/09movie1.mp4" type="video/mp4">
